# ds-provider-vieri-py-lib

./: CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml
.config/: pytest.ini  ruff.toml
.github/workflows/: release.yaml
docs/source/: conf.py  index.rst
src/ds_provider_vieri_py_lib/: __init__.py  enums.py  resource.yaml
src/ds_provider_vieri_py_lib/dataset/: vieri.py
src/ds_provider_vieri_py_lib/linked_service/: __init__.py  vieri.py
tests/: test_version.py
tests/dataset/: test_vieri_dataset.py
tests/linked_service/: test_linked_service.py
